--- a/WAM7 Dynamic Parameter Identification.ipynb
+++ b/WAM7 Dynamic Parameter Identification.ipynb
@@ -11,10 +11,12 @@
      "cell_type": "markdown",
      "metadata": {},
      "source": [
-      "Experimental WAM Robot Dynamic Identification with LMI\n",
-      "======================================================\n",
+      "Experimental Identification of Physically Feasible Dynamic Parameters of the 7-link WAM\u2122 Robot using LMI\u2013SDP Techniques\n",
+      "=======================================================================================================================\n",
       "\n",
-      "*Experimental Identification of Physically Feasible Dynamic Parameters of the 7-link WAM\u2122 Robot using LMI/SDP*\n",
+      "*Experimental code and data associated with the paper:*\n",
+      "\n",
+      "**Crist\u00f3v\u00e3o D. Sousa and Rui Cortes\u00e3o, \"Physical feasibility of robot base inertial parameter identification: A linear matrix inequality approach,\" The International Journal of Robotics Research, vol. 33, no. 6, pp. 931\u2013944, May. 2014, doi: [10.1177/0278364913514870](http://dx.doi.org/10.1177/0278364913514870)**\n",
       "\n",
       "\n",
       "------------------------\n",
@@ -3921,7 +3923,7 @@
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 1
+     "prompt_number": 3
     },
     {
      "cell_type": "code",
