--- a/WAM7 Dynamic Parameter Identification.ipynb
+++ b/WAM7 Dynamic Parameter Identification.ipynb
@@ -14,6 +14,8 @@
       "Experimental Identification of Physically Feasible Dynamic Parameters of the 7-link WAM\u2122 Robot using LMI\u2013SDP Techniques\n",
       "=======================================================================================================================\n",
       "\n",
+      "[![DOI](https://zenodo.org/badge/920/cdsousa/wam7_dyn_ident.png)](http://dx.doi.org/10.5281/zenodo.10537)\n",
+      "\n",
       "*Experimental code and data associated with the paper:*\n",
       "\n",
       "**Crist\u00f3v\u00e3o D. Sousa and Rui Cortes\u00e3o, \"Physical feasibility of robot base inertial parameter identification: A linear matrix inequality approach,\" The International Journal of Robotics Research, vol. 33, no. 6, pp. 931\u2013944, May. 2014, doi: [10.1177/0278364913514870](http://dx.doi.org/10.1177/0278364913514870)**\n",
