Update WAM7 Dynamic Parameter Identification.ipynb

--- a/WAM7 Dynamic Parameter Identification.ipynb
+++ b/WAM7 Dynamic Parameter Identification.ipynb
@@ -20,6 +20,7 @@
       "\n",
       "**Crist\u00f3v\u00e3o D. Sousa and Rui Cortes\u00e3o, \"Physical feasibility of robot base inertial parameter identification: A linear matrix inequality approach,\" The International Journal of Robotics Research, vol. 33, no. 6, pp. 931\u2013944, May. 2014, doi: [10.1177/0278364913514870](http://dx.doi.org/10.1177/0278364913514870)**\n",
       "\n",
+      "[Postprint availabe from ResearchGate](http://www.researchgate.net/publication/262483999_Physical_feasibility_of_robot_base_inertial_parameter_identification_A_linear_matrix_inequality_approach)",
       "\n",
       "------------------------\n",
       "\n",
